category module done and tested